--- a/public/views/addNewProject.html
+++ b/public/views/addNewProject.html
@@ -1,4 +1,4 @@
-<div class="glass" ng-click="hide()"></div>
+<div class="glass" ng-click="hide()">
 <div class="popup">
 	<header class="popup-header">
 		Nouveau projet
@@ -7,7 +7,7 @@
 		<div>
 
 	        <label>Nom du projet</label> 
-	        <input type="text" id="nom" name="nom" ng-model="project.nom" placeholder="Nom du projet"> 
+	        <input type="text" id="nom" name="nom" ng-model="project.nom" placeholder="Nom du projet"/> 
 
 		</div>
 	</section>
@@ -15,4 +15,5 @@
 		<a href="" class="btn" ng-click="hide()">Annuler</a>
 		<a href="" class="btn btn-grey" ng-click="createProject()">Enregistrer</a>
 	</footer>
+</div>
 </div>
