--- a/public/views/addNewTicket.html
+++ b/public/views/addNewTicket.html
@@ -8,22 +8,22 @@
 
 		<div class="leftContent">
 			<label id="lbl">History ID</label>
-			<input type="text" ng-model="ticket.history_id" value="ticket.history_id"/><br/><br/>
+			<input type="text" ng-model="ticket.history_id" value=""/><br/><br/>
 			<label id="lbl">Titre</label>
-			<input type="text" ng-model="ticket.titre" value="ticket.titre"/><br/><br/>
+			<input type="text" ng-model="ticket.titre" value=""/><br/><br/>
 			<label id="lbl">Description</label>
-			<input type="text" ng-model="ticket.description" value="ticket.description"/><br/><br/>
+			<input type="text" ng-model="ticket.description" value=""/><br/><br/>
 		</div>
 
 		<div class="rightContent">
 			<!--<label id="lbl">Importance </label>
 			<input type="text" ng-model="ticket.importance" value="ticket.importance"/><br/><br/>-->
 			<label id="lbl">Estimation DEV</label>
-			<input type="text" ng-model="ticket.estimation_dev" value="ticket.estimation_dev"/><br/><br/>
+			<input type="text" ng-model="ticket.estimation_dev" value=""/><br/><br/>
 			<label id="lbl">Estimation TEST</label>
-			<input type="text" ng-model="ticket.estimation_test" value="ticket.estimation_test"/><br/><br/>
+			<input type="text" ng-model="ticket.estimation_test" value=""/><br/><br/>
 			<label id="lbl">TRAC ID</label>
-			<input type="text" ng-model="ticket.trac_id" value="ticket.trac_id"/><br/><br/>
+			<input type="text" ng-model="ticket.trac_id" value=""/><br/><br/>
 		</div>
 		
 	</section><br/><br/>
