--- a/public/views/addNewTicket.html
+++ b/public/views/addNewTicket.html
@@ -31,5 +31,8 @@
 	<footer class="popup-footer">
 		<a href="" class="btn" ng-click="hide()">Annuler</a>
 		<a href="" class="btn btn-grey" ng-click="saveTicket()">Enregistrer</a>
+        <a class="btn icon-print" href="" ng-click="printPdf()">
+                Imprimer les tickets
+            </a>
 	</footer>
 </div>
