--- a/public/views/logged.html
+++ b/public/views/logged.html
@@ -11,7 +11,10 @@
         <a class="btn icon-print" ng-click="printPdf()">
             Imprimer les tickets
         </a>
-        <a class="btn icon-doc" href="">
+        <a class="btn icon-print" ng-click="save()">
+            Enregistrer les tickets (JSON)
+        </a>
+        <a class="btn icon-doc" ng-click="displayReport()">
             Rapport
         </a>
     </div>
