--- a/public/views/addNewTicket.html
+++ b/public/views/addNewTicket.html
@@ -1,38 +1,50 @@
 
 <div class="popup">
-	<header class="popup-header">
-		Edition de ticket
-	</header>
-	
-	<section id="ticket_{{$index}}" class="popup-section newTicketContent">
+    <header class="popup-header">
+        Edition de ticket
+    </header>
 
-		<div class="leftContent">
-			<label id="lbl">History ID</label>
-			<input type="text" ng-model="ticket.history_id" value=""/><br/><br/>
-			<label id="lbl">Titre</label>
-			<input type="text" ng-model="ticket.titre" value=""/><br/><br/>
-			<label id="lbl">Description</label>
-			<input type="text" ng-model="ticket.description" value=""/><br/><br/>
-		</div>
+    <section id="ticket_{{$index}}" class="popup-section newTicketContent">
 
-		<div class="rightContent">
-			<!--<label id="lbl">Importance </label>
-			<input type="text" ng-model="ticket.importance" value="ticket.importance"/><br/><br/>-->
-			<label id="lbl">Estimation DEV</label>
-			<input type="text" ng-model="ticket.estimation_dev" value=""/><br/><br/>
-			<label id="lbl">Estimation TEST</label>
-			<input type="text" ng-model="ticket.estimation_test" value=""/><br/><br/>
-			<label id="lbl">TRAC ID</label>
-			<input type="text" ng-model="ticket.trac_id" value=""/><br/><br/>
-		</div>
-		
-	</section><br/><br/>
-	
-	<footer class="popup-footer">
-		<a href="" class="btn" ng-click="hide()">Annuler</a>
-		<a href="" class="btn btn-grey" ng-click="saveTicket()">Enregistrer</a>
+        <div class="leftContent">
+            <label id="lbl">History ID</label>
+            <input type="text" ng-model="ticket.history_id" value=""/><br/><br/>
+            <label id="lbl">Titre</label>
+            <input type="text" ng-model="ticket.titre" value=""/><br/><br/>
+            <label id="lbl">Description</label>
+            <input type="text" ng-model="ticket.description" value=""/><br/><br/>
+        </div>
+
+        <div class="rightContent">
+            <!--<label id="lbl">Importance </label>
+<input type="text" ng-model="ticket.importance" value="ticket.importance"/><br/><br/>-->
+            <label id="lbl">TRAC ID</label>
+            <input type="text" ng-model="ticket.trac_id" value=""/><br/><br/>
+            <label id="lbl">Estimation DEV</label>
+            <input type="text" ng-model="ticket.estimation_dev" value=""/><br/><br/>
+            <label id="lbl">Estimation TEST</label>
+            <input type="text" ng-model="ticket.estimation_test" value=""/><br/><br/>
+        </div>
+
+    </section><br/><br/>
+    <div class="optinalRadio" ng-show="ticket.id != undefined">
+        <div><b>Assigné à:</b>
+            <div class="labelSet"> <label ng-repeat="dev in sprint.team">
+                <input type="radio" name="personne" ng-model="ticket.personne" ng-value="dev.nom" />{{dev.nom}}
+                </label>
+            </div>
+        </div><br/>
+        <div><b>État:</b>
+            <div class="labelSet"> <label ng-repeat="status in ['En cours', 'A tester', 'Clos']">
+                <input type="radio" name="stat" ng-model="ticket.etat" ng-value="status" />{{status}}
+                </label></div>
+        </div>
+    </div>
+    <footer class="popup-footer">
+        <a href="" class="btn" ng-click="hide()">Annuler</a>
+        <a href="" class="btn btn-grey" ng-click="saveTicket()">Enregistrer</a>
         <a class="btn icon-print" href="" ng-click="printPdf()">
-                Imprimer les tickets
-            </a>
-	</footer>
+            Imprimer les tickets
+        </a>
+    </footer>
 </div>
